--- a/src/components/show/main/Start/Start.module.scss
+++ b/src/components/show/main/Start/Start.module.scss
@@ -5,13 +5,17 @@
   flex-direction: column;
   width: 600px;
   min-width: 400px;
-  padding: 0 0 140px 0;
+  padding: 0 0 90px 0;
 
   h1 {
     margin-bottom: 40px;
-    margin-top: 120px;
+    margin-top: 140px;
     font-size: 38px;
     font-weight: 500;
+  }
+
+  h1:first-child {
+    margin-top: 110px;
   }
 
   md-filled-text-field {
@@ -81,7 +85,6 @@
   .line {
     height: 50px;
     display: flex;
-    margin-bottom: 40px;
 
     .space {
       flex-grow: 1;
