--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -293,7 +293,7 @@
               height: 58px;
               object-fit: cover;
               border-radius: 20px;
-              border: 1px solid #6b7a81;
+              //border: 1px solid #6b7a81;
             }
 
             span {
