--- a/src/components/show/main/Start/Start.module.scss
+++ b/src/components/show/main/Start/Start.module.scss
@@ -9,13 +9,13 @@
 
   h1 {
     margin-bottom: 40px;
-    margin-top: 140px;
+    margin-top: 130px;
     font-size: 38px;
     font-weight: 500;
   }
 
   h1:first-child {
-    margin-top: 110px;
+    margin-top: 90px;
   }
 
   md-filled-text-field {
@@ -105,6 +105,7 @@
 
   .buttons {
     margin: -20px -10px -10px -10px;
+    white-space: pre;
 
     div {
       width: 100%;
@@ -126,6 +127,7 @@
         height: 30px;
         display: flex;
         align-items: center;
+        white-space: pre;
         transition: all 0.12s ease-in-out;
       }
 
